tests/sumo/pedestrian_model/striping/errors/disconnected_trip/errors.sumo.agg
Error: No connection found between edge 'SC' and edge 'CW' for person 'p0'.
Quitting (on error).
Warning: 1 total messages of type: No connection between % '%' and % '%' found.
